--- a/src/styles.css
+++ b/src/styles.css
@@ -15,6 +15,14 @@ body {
     height: 100vh;
 }
 
+.center-container{
+    display: flex;
+    flex: 1;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
 .green-button {
     display: inline-block;
     background-color: #24C059;
@@ -31,6 +39,25 @@ body {
 
 .green-button:hover {
     background-color: #1a8d40;
+}
+
+.drop-zone {
+    display: flex;
+    flex-direction: column;
+    background-color: #eeeeee86;
+    border: 2px dashed #d7cfcf;
+    border-radius: 10px;
+    width: 500px;
+    height: 200px;
+    margin-top: 50px;
+}
+
+.drop-zone-content { 
+    display: flex;
+    color: black;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
 }
 
 @keyframes movingGradient {
