draft upload image, process image

--- a/src/app/process-image/process-image.component.html
+++ b/src/app/process-image/process-image.component.html
@@ -1,4 +1,4 @@
-<div class="background">
+<div class="container">
     <div class="card-container">
         <div class="card">
             <img [src]="preimageUrl" alt="Uploaded image"/>
