--- a/src/app/upload-image/upload-image.component.css
+++ b/src/app/upload-image/upload-image.component.css
@@ -1,18 +1,29 @@
+.container{
+    display: flex;
+    flex-direction: column;
+    background: linear-gradient(75deg, #3E4645, #223b51, #388150);
+    background-size: 300% 300%;
+    animation: color 15s ease-in-out infinite;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+}
+
 .card {
-    /* background: rgba(250, 235, 215, 0.527); */
+    background: rgba(250, 235, 215, 0.527);
     border: 1px solid #ccc;
     border-radius: 5px;
     box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
     width: 500px;
-    height: 600px;
+    height: 200px;
     padding: 100px;
     display: flex;
     justify-content: center;
     align-items: center;
     overflow: hidden;
-    background: linear-gradient(75deg, #ffffff, #388150);
-    background-size: 300% 300%;
-    animation: color 15s ease-in-out infinite;
+    background: linear-gradient(0deg, #ffffff2b, #0000009b);
+    background-size: 200% 200%;
+    animation: color 5s ease-in-out infinite;
 }
 
 .card img {
@@ -21,17 +32,19 @@
     display: block;
 }
 
-.card-container {
+.confirm-image {
     display: flex;
     justify-content: center;
-    align-items: center;
 }
 
-.card-container > div {
-    margin: 0 80px;
-  }
-
-.columns{
-    display: flex;
-    flex-direction: rows;
+@keyframes color {
+    0%{
+        background-position: 0 50%;
+    }
+    50%{
+        background-position: 100% 50%
+    }
+    100%{
+        background-position: 0 50%
+    }
 }
