--- a/src/app/quiz-page/quiz-page.component.css
+++ b/src/app/quiz-page/quiz-page.component.css
@@ -1,40 +1,36 @@
-.background{
-    background-color: #f5f5f5;
-    padding: 20px;
-    margin: 20px;
-    border-radius: 10px;
-}
-
-.container{
-    max-width: 800px;
-    margin: 0 auto;
-}
-
-h1{
-    font-size: 24px;
-    color: #333;
-    margin-bottom: 10px;
-}
-
-ul{
-    list-style: none;
-    padding: 0;
-}
-
-li {
-    margin-bottom: 10px;
-}
-
-label {
-    display: inline-block;
-    margin-right: 10px;
-}
-
-button {
-    background-color: #428bca;
-    color: #fff;
-    border: none;
-    padding: 10px 20px;
+.quiz-card {
+    background: rgba(250, 235, 215, 0.527);
+    border: 1px solid #ccc;
     border-radius: 5px;
-    cursor: pointer;
-  }
+    box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
+    width: 500px;
+    height: 300px;
+    padding: 100px;
+    padding-bottom: 200px;
+    margin-top: 100px;
+    overflow: hidden;
+    display: flex;
+    flex-direction: column;
+}
+
+.quiz-card img {
+    max-width: 150px;
+    display: block;
+}
+
+.quiz-question {
+    margin-bottom: 20px;
+}
+
+.quiz-answers {
+
+}
+
+.row-images {
+    display: flex;
+    flex-direction: row;
+}
+
+.quiz-submit {
+    width: 20px;
+}
