wip upload image rework

--- a/src/app/upload-image/upload-image.component.html
+++ b/src/app/upload-image/upload-image.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<!-- <div class="container">
     <div class="card">
         <ngx-file-drop 
             *ngIf="showDrop"
@@ -11,9 +11,31 @@
             (onFileLeave)="fileLeave($event)"
             [showBrowseBtn]="true">
         </ngx-file-drop>
-        <img *ngIf="showImage" [src]="imageUrl" alt="Uploaded image">
     </div>
 
+    <ng-container class="confirm-image" *ngIf="showImage">
+        <button class="custom-button" (click)="onCancel()">Cancel</button>
+        <button class="custom-button" (click)="onSubmit()">Submit</button>
+    </ng-container>
+</div> -->
+
+<div class="background">
+    <div class="center-container">
+        <div class="upload-card">
+            <ngx-file-drop 
+                *ngIf="showDrop"
+                dropZoneClassName="drop-zone"
+                contentClassName="drop-zone-content"
+                browseBtnClassName="browse-button"
+                [dropZoneLabel]="'Drop files here\nor'" 
+                (onFileDrop)="dropped($event)" 
+                (onFileOver)="fileOver($event)" 
+                (onFileLeave)="fileLeave($event)"
+                [showBrowseBtn]="true">
+            </ngx-file-drop>
+            <img *ngIf="showImage" [src]="imageUrl" alt="Uploaded image">
+        </div>
+    </div>
     <ng-container class="confirm-image" *ngIf="showImage">
         <button class="custom-button" (click)="onCancel()">Cancel</button>
         <button class="custom-button" (click)="onSubmit()">Submit</button>
