--- a/src/app/upload-image/upload-image.component.css
+++ b/src/app/upload-image/upload-image.component.css
@@ -1,29 +1,14 @@
-.container{
-    display: flex;
-    flex-direction: column;
-    background: linear-gradient(75deg, #3E4645, #223b51, #388150);
-    background-size: 300% 300%;
-    animation: color 15s ease-in-out infinite;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-}
-
-.card {
-    background: rgba(250, 235, 215, 0.527);
+.upload-card {
+    background: #D9E1E0;
     border: 1px solid #ccc;
-    border-radius: 5px;
-    box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
+    border-radius: 25px;
     width: 500px;
     height: 200px;
-    padding: 100px;
+    padding: 200px;
     display: flex;
     justify-content: center;
     align-items: center;
     overflow: hidden;
-    background: linear-gradient(0deg, #ffffff2b, #0000009b);
-    background-size: 200% 200%;
-    animation: color 5s ease-in-out infinite;
 }
 
 .card img {
@@ -36,6 +21,8 @@
     display: flex;
     justify-content: center;
 }
+
+.drop-label {}
 
 @keyframes color {
     0%{
