--- a/src/styles.css
+++ b/src/styles.css
@@ -21,6 +21,7 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    height: 100vh;
 }
 
 .green-button {
@@ -44,20 +45,32 @@ body {
 .drop-zone {
     display: flex;
     flex-direction: column;
-    background-color: #eeeeee86;
-    border: 2px dashed #d7cfcf;
+    justify-content: center;
+    align-items: center;
+    background-color: #D9E1E0;
+    border: 2px dashed #000000;
     border-radius: 10px;
     width: 500px;
-    height: 200px;
-    margin-top: 50px;
+    height: 300px;
 }
 
 .drop-zone-content { 
-    display: flex;
-    color: black;
-    align-items: center;
+    display:flexbox;
     justify-content: center;
+    align-items: center;
+    text-align: center;
     height: 100vh;
+    margin-top: 25%;
+    font-size: 20px;
+}
+
+.browse-button {
+    background-color: transparent;
+    border: none;
+    color: #24C059;
+    cursor: pointer;
+    font-size: inherit;
+    font-size: 20px;
 }
 
 @keyframes movingGradient {
