--- a/src/styles.css
+++ b/src/styles.css
@@ -55,13 +55,16 @@ body {
 }
 
 .drop-zone-content { 
-    display:flexbox;
+    display: flexbox;
     justify-content: center;
     align-items: center;
     text-align: center;
     height: 100vh;
     margin-top: 25%;
     font-size: 20px;
+    font-family: 'Raleway', sans-serif;
+    font-weight: 600;
+    color:#000000cb;
 }
 
 .browse-button {
