upload and process rework

--- a/src/app/upload-image/upload-image.component.html
+++ b/src/app/upload-image/upload-image.component.html
@@ -21,7 +21,7 @@
 
 <div class="background">
     <div class="center-container">
-        <div class="upload-card">
+        <div class="transition-card">
             <ngx-file-drop 
                 *ngIf="showDrop"
                 dropZoneClassName="drop-zone"
