--- a/src/app/process-image/process-image.component.css
+++ b/src/app/process-image/process-image.component.css
@@ -1,61 +1,32 @@
-.container{
+.card-container { 
     display: flex;
-    flex-direction: column;
-    background: linear-gradient(75deg, #3E4645, #223b51, #388150);
-    background-size: 300% 300%;
-    animation: color 15s ease-in-out infinite;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    gap: 50px;
 }
-
-.card {
-    /* background: rgba(250, 235, 215, 0.527); */
+.process-card {
+    background: #D9E1E0;
     border: 1px solid #ccc;
-    border-radius: 5px;
-    box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
+    border-radius: 25px;
     width: 300px;
-    height: 300px;
-    padding: 80px;
+    height: 400px;
+    padding: 100px;
     display: flex;
     justify-content: center;
     align-items: center;
     overflow: hidden;
-    background: linear-gradient(75deg, #ffffff, #388150);
-    background-size: 300% 300%;
-    animation: color 15s ease-in-out infinite;
 }
 
-.card img {
-    max-width: 100%;
-    max-height: 100%;
-    display: block;
-}
-
-.card-container {
+.wrapper-image {
+    max-width: 500px; 
+    max-height: 500px; 
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
-.card-container > div {
-    margin: 0 80px;
-  }
-
-.columns{
-    display: flex;
-    flex-direction: rows;
+.wrapper-image img {
+    max-width: 100%;
+    max-height: 100%;
+    object-fit: contain;
 }
-
-@keyframes color {
-    0%{
-        background-position: 0 50%;
-    }
-    50%{
-        background-position: 100% 50%
-    }
-    100%{
-        background-position: 0 50%
-    }
-}
-  
