--- a/src/app/process-image/process-image.component.html
+++ b/src/app/process-image/process-image.component.html
@@ -1,11 +1,17 @@
-<div class="container">
-    <div class="card-container">
-        <div class="card">
-            <img [src]="preimageUrl" alt="Uploaded image"/>
+<div class="background">
+    <div class="center-container">
+        <div class="card-container">
+            <div class="transition-card smaller">
+                <div class="wrapper-image">
+                    <img [src]="preimageUrl" alt="Uploaded image"/>
+                </div>
+            </div>
+            <div class="transition-card smaller">
+                <div class="wrapper-image">
+                    <img *ngIf="receivedImage" src="http://localhost:8000/image">
+                </div>
+            </div>
         </div>
-        <button class="custom-button"(click)="onProcess()">Process Image</button>
-        <div class="card">
-            <img *ngIf="receivedImage" src="http://localhost:8000/image">
-        </div>
+        <button class="green-button process"(click)="onProcess()">Process Image</button>
     </div>
 </div>
