--- a/src/app/upload-image/upload-image.component.css
+++ b/src/app/upload-image/upload-image.component.css
@@ -1,33 +1,12 @@
-.upload-card {
-    background: #D9E1E0;
-    border: 1px solid #ccc;
-    border-radius: 25px;
-    width: 500px;
-    height: 200px;
-    padding: 200px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    overflow: hidden;
-}
-
-.upload-card img {
-    width: 120%;
-    height: 120%;
-    display: block;
-}
-
 .wrapper-image {
     max-width: 500px; 
     max-height: 500px; 
-    /* min-width: 200px;  */
-    /* min-height: 200px; */
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
-.image-wrapper img {
+.wrapper-image img {
     max-width: 100%;
     max-height: 100%;
     object-fit: contain;
@@ -35,16 +14,4 @@
 
 .confirm-image {
     display: inline;
-}
-
-@keyframes color {
-    0%{
-        background-position: 0 50%;
-    }
-    50%{
-        background-position: 100% 50%
-    }
-    100%{
-        background-position: 0 50%
-    }
 }
