--- a/src/styles.css
+++ b/src/styles.css
@@ -42,6 +42,12 @@ body {
     background-color: #1a8d40;
 }
 
+.green-button.process {
+    margin-top: 20px;
+    padding-left: 175px;
+    padding-right: 175px;
+}
+
 .drop-zone {
     display: flex;
     flex-direction: column;
@@ -74,6 +80,71 @@ body {
     cursor: pointer;
     font-size: inherit;
     font-size: 20px;
+    font-weight: 600;
+}
+
+.transition-card {
+    background: #D9E1E0;
+    border: 1px solid #ccc;
+    border-radius: 25px;
+    width: 500px;
+    height: 200px;
+    padding: 200px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+    position: relative;
+  }
+  
+.transition-card img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+  
+.transition-card.smaller {
+    width: 300px;
+    height: 400px;
+    padding: 100px;
+    box-shadow: 0px 1px 3px rgb(0, 0, 0);
+    position: relative;
+}
+
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
+
+@keyframes fadeOut {
+    from {
+        opacity: 1;
+    }
+    to {
+        opacity: 0;
+    }
+}
+
+@keyframes slide-in {
+  from {
+    transform: translateX(-100%);
+  }
+  to {
+    transform: translateX(0);
+  }
+}
+
+@keyframes shrink {
+  from {
+    transform: scale(1);
+  }
+  to {
+    transform: scale(0.5);
+  }
 }
 
 @keyframes movingGradient {
