--- a/src/app/quiz-page/quiz-page.component.css
+++ b/src/app/quiz-page/quiz-page.component.css
@@ -1,5 +1,6 @@
 .quiz-card {
-    background: rgba(250, 235, 215, 0.527);
+    background: rgba(94, 152, 45, 0.53);
+    background-color: white;
     border: 1px solid #ccc;
     border-radius: 5px;
     box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
@@ -12,10 +13,10 @@
     display: flex;
     flex-direction: column;
 }
-
 .quiz-card img {
     max-width: 150px;
     display: block;
+    margin-bottom: 15px;
 }
 
 .quiz-question {
@@ -23,7 +24,30 @@
 }
 
 .quiz-answers {
+  border-color: #2196f3;
+  background-color: #ffffff;
+  color: black;
+  display: flex;
+  align-items: center;
+  width: 100%;
+  margin-bottom: 15px;
+}
 
+
+.quiz-answers label {
+  flex: 1;
+  color: #000;
+}
+
+.quiz-answers:hover {
+  background-color: #e6f2ff;
+  cursor: pointer;
+}
+
+.radio-button label {
+  display: flex;
+  align-items: center;
+  color: black;
 }
 
 .row-images {
@@ -33,4 +57,18 @@
 
 .quiz-submit {
     width: 20px;
+}
+
+.answers-bg{
+
+}
+
+.quiz-answer {
+  max-width: 150px;
+  margin-left: auto;
+  display: block;
+  border: 3px solid #53be67;
+}
+.quiz-image{
+  border: 3px solid #53be67;
 }
