--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -1,9 +1,7 @@
 <div class="background">
     <div class="container">
-      <div class="left-container">
-  
-      </div>
       <div class="center-container">
+
         <div class="logo-title">AngelEye AI</div>
         <div class="description">
           Empower your diagnosis with our <b style="color:#24C059; text-shadow: 0px 1px 1.5px rgba(0, 0, 0, 0.219)">AI-powered health scan analysis</b>. 
@@ -13,7 +11,14 @@
         <div class="get-started">
             <button class="green-button" (click)="onStart()">Get Started</button>
         </div>
+
+        <div class="nav-bar">
+          <a target="_self" routerLink="/about">About Us</a>
+          <a target="_self" routerLink="/search">Search Engine</a>
+          <a target="_self" routerLink="/quiz">Quiz Yourself</a>
+        </div>
       </div>
+      
     </div>
-    <a class="link" target="_self" routerLink="/about">About Us</a>
+    
   </div>
