--- a/src/app/about-page/about-page.component.css
+++ b/src/app/about-page/about-page.component.css
@@ -7,26 +7,30 @@
     justify-content: center;
     align-items: center;
     height: 100vh;
+    width: 100%;
+    overflow-x: hidden;
+    overflow-y: auto;
 }
 
 .title {
     position: absolute;
     color: #fffffff3;
     font-size: 60px;
-    left: 400px;
-    top: 200px;
+    left: 41%;
+    top: 10%;
 }
 
 .card {
     position: absolute;
-    left: 400px;
-    top: 315px;
+    left: 7.5%;
+    top: 40%;
     background: rgba(27, 27, 27, 0.527);
     border: 1px solid #ccc;
     border-radius: 25px;
     box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
-    width: 1200px;
-    height: 400px;
+    width: 80%;
+    height: auto;
+    display: flex;
     flex-direction: column;
     justify-content: center;
     overflow: hidden;
@@ -34,8 +38,15 @@
 }
 
 .description {
+    font-size: 26px;
     color: #ffffffd5;
-    margin-top: 20px;
+    margin-top: 8px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    text-align: center;
+
 }
 
 .link {
@@ -43,5 +54,18 @@
     bottom: 10px;
     justify-content: center;
     text-align: center;
+    color: #ffffff;
+    font-size: 14px;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    padding: 10px 20px;
+    background-color: #24C059;
+    border-radius: 25px;
+    transition: all 0.2s ease-in-out;
+    text-decoration: none;
+}
+
+.link:hover {
+    background-color: #1a8d40;
     color: #c4c4c4;
 }
