--- a/src/app/about-page/about-page.component.html
+++ b/src/app/about-page/about-page.component.html
@@ -2,18 +2,12 @@
     <h1 class="title">About us</h1>
     <div class="card">
         <div class="description">
-            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's 
-            standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to
-            make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, 
-            remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, 
-            and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
-        </div>
-        <div class="description">
-            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's 
-            standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to
-            make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, 
-            remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, 
-            and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+            AngelEyeAI is built upon the idea that machine learning can be applied to help provide solutions for healthcare solutions.
+            AngelEyeAI helps med school students by providing image classification for Covid-19 and Pneumonia x-ray scans.
+            It also provides an image based search page for Covid-19 and Pneumonia that produces image classification, images related to
+            the classification, resourceful urls, and a quick summary made to create learning efficient. Finally, AngelEyeAI provides
+            a way for students to test their knowledge through a 5 question quiz againt a machine learning model.
+            We believe that learning doesn't have to be as tedious as it is.
         </div>
     </div>
 
