--- a/src/app/home-page/home-page.component.css
+++ b/src/app/home-page/home-page.component.css
@@ -22,6 +22,7 @@
 .get-started {
     text-align: center;
     margin-top: 30px;
+    margin-right: 30px;
     opacity: 0;
     animation: fadeIn 1s ease-in-out forwards;
     animation-delay: 4s;
