--- a/src/app/process-image/process-image.component.html
+++ b/src/app/process-image/process-image.component.html
@@ -9,6 +9,7 @@
             <div class="transition-card smaller">
                 <div class="wrapper-image">
                     <img *ngIf="receivedImage" src="http://localhost:8000/image">
+                    <div *ngIf="receivedImage" class="classification">{{ prediction }}</div>
                 </div>
             </div>
         </div>
