--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -2,7 +2,7 @@
     <div class="container">
       <div class="center-container">
 
-        <div class="logo-title">AngelEye AI</div>
+        <div class="logo-title">Angel<b style="color:#24C059; text-shadow: 0px 1px 1.5px rgba(0, 0, 0, 0.219)">Eye</b> AI</div>
         <div class="description">
           Empower your diagnosis with our <b style="color:#24C059; text-shadow: 0px 1px 1.5px rgba(0, 0, 0, 0.219)">AI-powered health scan analysis</b>. 
           Our model utilizes heat maps to pinpoint several potential health concerns, 
