--- a/src/app/about-page/about-page.component.html
+++ b/src/app/about-page/about-page.component.html
@@ -3,11 +3,10 @@
     <div class="card">
         <div class="description">
             AngelEyeAI is built upon the idea that machine learning can be applied to help provide solutions for healthcare solutions.
-            AngelEyeAI helps med school students by providing image classification for Covid-19 and Pneumonia x-ray scans.
+            AngelEyeAI helps medical school students by providing image classification for Covid-19 and Pneumonia x-ray scans.
             It also provides an image based search page for Covid-19 and Pneumonia that produces image classification, images related to
-            the classification, resourceful urls, and a quick summary made to create learning efficient. Finally, AngelEyeAI provides
-            a way for students to test their knowledge through a 5 question quiz againt a machine learning model.
-            We believe that learning doesn't have to be as tedious as it is.
+            the classification, resourceful urls, and a quick summary made to create learning efficient. We also strive to apply this technology in 
+            education, research, ad at-home care with our upload and image search functionality. 
         </div>
     </div>
 
